--- a/package.json
+++ b/package.json
@@ -51,10 +51,13 @@
             "@types/react": "^19.1.11",
             "@types/react-dom": "^19.1.8",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "gh-pages": "^6.3.0",
             "vite": "^5.4.19"
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "preview": "vite preview",
+            "deploy": "npm run build && gh-pages -d dist"
       }
 }
