--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
+            "i18next": "^25.5.2",
+            "i18next-browser-languagedetector": "^8.2.0",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
@@ -40,6 +42,7 @@
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
+            "react-i18next": "^15.7.3",
             "react-resizable-panels": "^2.1.7",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
@@ -50,8 +53,10 @@
             "@types/node": "^20.10.0",
             "@types/react": "^19.1.11",
             "@types/react-dom": "^19.1.8",
+            "@types/react-i18next": "^7.8.3",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "gh-pages": "^6.3.0",
+            "playwright": "^1.55.0",
             "vite": "^5.4.19"
       },
       "scripts": {
